--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -18,3 +18,32 @@
 input::placeholder {
   font-weight: bold;
 }
+
+.applabel {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
+  color: hsl(0, 1%, 44%);
+}
+
+.submitline {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+hr {
+  height: 1px;
+  width: 100%;
+  background-color: hsl(0, 1%, 44%);
+}
+
+.submitbutton {
+  height: 60px;
+  width: 60px;
+  border-radius: 50px !important;
+  background-color: hsl(259, 100%, 65%) !important;
+}
+svg {
+  width: 100%;
+}
