--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,6 @@
+* {
+  font-family: Poppins;
+}
 .acard {
   width: 100%;
   height: 100%;
@@ -11,7 +14,7 @@
   gap: 25px;
 }
 .forminput {
-  width: 100px !important;
+  width: 130px !important;
   height: 50px !important;
 }
 
@@ -46,4 +49,14 @@ hr {
 }
 svg {
   width: 100%;
+}
+
+.results {
+  font-size: 48px;
+  font-style: italic;
+  font-weight: 800;
+}
+
+.rnum {
+  color: hsl(259, 100%, 65%);
 }
