--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -61,3 +61,15 @@ svg {
 .rnum {
   color: hsl(259, 100%, 65%);
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
