--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -46,8 +46,8 @@ hr {
   height: 60px;
   width: 60px;
   border-radius: 50px !important;
-  background-color: hsl(259, 100%, 65%) !important;
 }
+
 svg {
   width: 100%;
 }
@@ -72,4 +72,12 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+#dayerror,
+#montherror,
+#yearerror {
+  color: #f00;
+  font-size: 10px;
+  margin: 0 !important;
 }
