--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -6,7 +6,7 @@
   height: 100%;
   border-radius: 20px 20px 100px 20px;
   background-color: hsl(0, 0%, 100%);
-  padding: 40px;
+  padding: 45px;
 }
 .formarea {
   display: flex;
@@ -14,7 +14,7 @@
   gap: 25px;
 }
 .forminput {
-  width: 130px !important;
+  width: 120px !important;
   height: 50px !important;
 }
 
@@ -85,4 +85,15 @@ input[type="number"] {
   color: #f00;
   font-size: 10px;
   margin: 0 !important;
+}
+
+@media only screen and (max-width: 500px) {
+  .forminput {
+    width: 80px !important;
+  }
+
+  .submitbutton {
+    position: absolute;
+    right: 45%;
+  }
 }
